@@ -76,6 +76,7 @@ Verilator 5.041 devel
 * Fix Windows compilation of Verilator with spaces in the path (#6477). [Fabian Keßler-Schulz]
 * Fix PROTOTYPEMIS error on implicit logic (#6482). [Alex Solomatnikov]
 * Fix configure misdetecting C++14 (#6488). [Thomas O'Keeffe]
+* Fix false BLKSEQ on non-edged sensitivity list (#6492). [Oron Port]
 
 
 Verilator 5.040 2025-08-30
